--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,8 @@
     
     <!-- Header -->
     <div id="site-header" data-include="partials/header-site.html"></div>
-    <main class="shop-main" aria-labelledby="shop-heading">
+    <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
+    <main class="shop-main page-main" aria-labelledby="shop-heading">
       <section class="shop-overview">
         <div class="shop-overview__inner">
           <p class="shop-overview__eyebrow">Shop</p>
