--- a/수목원지도.html
+++ b/수목원지도.html
@@ -25,6 +25,7 @@
     
     <!-- Header -->
     <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <!-- 가시림 소개 -->
     <section class="body-container" aria-labelledby="intro-heading">
