--- a/프로그램.html
+++ b/프로그램.html
@@ -24,9 +24,8 @@
   <div class="page">
     <!-- Header -->
     <div id="site-header" data-include="partials/header-site.html"></div>
-    <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
-    <main class="program-main page-main" aria-labelledby="program-heading">
+    <main class="program-main" aria-labelledby="program-heading">
       <section class="program-hero">
         <div class="program-hero__grid">
           <div class="program-hero__copy">
@@ -38,34 +37,6 @@
           <figure class="program-hero__media">
             <img src="assets/img/main.jpg" alt="나무 사이로 들어오는 햇살이 비추는 숲길" loading="lazy">
           </figure>
-        </div>
-      </section>
-
-      <section class="program-summary" aria-label="프로그램 카테고리 요약">
-        <div class="program-summary__header">
-          <p class="program-summary__eyebrow">Choose your flow</p>
-          <h2 class="program-summary__title">세 가지 결로 만나는 가시림 프로그램</h2>
-          <p class="program-summary__description">산책 명상, 온실 명상, 원예 클래스까지 — 원하는 결을 선택하면 상세 페이지에서 일정과 신청 정보를 확인할 수 있습니다.</p>
-        </div>
-        <div class="program-summary__grid">
-          <a class="program-summary__card" href="산책명상.html">
-            <span class="program-summary__tag">Breath &amp; Walk</span>
-            <h3 class="program-summary__card-title">산책 명상</h3>
-            <p class="program-summary__card-copy">새벽 공기와 숲 해설이 어우러진 보행 명상으로 하루를 열어보세요.</p>
-            <span class="program-summary__cta">자세히 보기</span>
-          </a>
-          <a class="program-summary__card" href="명상.html">
-            <span class="program-summary__tag">Deep Focus</span>
-            <h3 class="program-summary__card-title">온실 명상</h3>
-            <p class="program-summary__card-copy">빛과 향이 가득한 온실에서 진행되는 집중 명상과 사운드 배스 세션.</p>
-            <span class="program-summary__cta">자세히 보기</span>
-          </a>
-          <a class="program-summary__card" href="원예.html">
-            <span class="program-summary__tag">Hands in Soil</span>
-            <h3 class="program-summary__card-title">원예 프로그램</h3>
-            <p class="program-summary__card-copy">계절 식물을 가꾸고 나만의 정원을 설계하는 감각 원예 워크숍.</p>
-            <span class="program-summary__cta">자세히 보기</span>
-          </a>
         </div>
       </section>
 
