--- a/명상.html
+++ b/명상.html
@@ -20,9 +20,8 @@
 <body>
   <div class="page">
     <div id="site-header" data-include="partials/header-site.html"></div>
-    <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
-    <main class="program-main page-main" aria-labelledby="meditation-program-heading">
+    <main class="program-main" aria-labelledby="meditation-program-heading">
       <section class="program-hero">
         <div class="program-hero__grid">
           <div class="program-hero__copy">
