--- a/프로그램소개.html
+++ b/프로그램소개.html
@@ -37,19 +37,19 @@
 
       <section class="program-summary" aria-labelledby="program-summary-heading">
         <div class="program-summary__grid">
-          <a class="program-summary__card" href="산책명상.html">
+          <a class="program-summary__card" href="프로그램목록.html#산책명상">
             <span class="program-summary__badge">WALK AND MEDITATE</span>
             <h3>산책 명상</h3>
             <p class="program-summary__excerpt">오디오 가이드와 함께하는 가시림 대표 명상 프로그램. 계절마다 달라지는 산책길에서 감각을 깨웁니다.</p>
             <span class="program-summary__cta">자세히 보기</span>
           </a>
-          <a class="program-summary__card" href="명상.html">
+          <a class="program-summary__card" href="프로그램목록.html#명상">
             <span class="program-summary__badge">MEDITATION</span>
             <h3>명상</h3>
             <p class="program-summary__excerpt">숲 속 명상 스튜디오에서 진행되는 심화 명상 세션으로, 요가 명상과 해먹 명상 등 다양한 커리큘럼을 제공합니다.</p>
             <span class="program-summary__cta">자세히 보기</span>
           </a>
-          <a class="program-summary__card" href="원예.html">
+          <a class="program-summary__card" href="프로그램목록.html#원예">
             <span class="program-summary__badge">GARDENING</span>
             <h3>원예</h3>
             <p class="program-summary__excerpt">식물을 직접 돌보고 디자인하며 치유를 경험하는 원예 클래스. 다양하고 희귀한 식재들을 활용한 실습으로 구성되어 있습니다.</p>
