Revamp hero layout and program interactions

--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-header" data-include="partials/header-shop.html"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
     <main class="shop-main" aria-labelledby="shop-heading">
       <section class="shop-overview">
