--- a/공간소개.html
+++ b/공간소개.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="공간 소개" data-hero-image="assets/img/banner-fourseasons/fall.jpg" data-hero-alt="노을이 비치는 가시림 정원"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <!-- 가시림 소개 -->
