--- a/소개.html
+++ b/소개.html
@@ -24,7 +24,7 @@
   <div class="page">
 
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="가시림 소개" data-hero-image="assets/img/banner-fourseasons/summer.jpg" data-hero-alt="여름 햇살이 스며든 가시림 정원 전경"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main>
@@ -209,9 +209,9 @@
       <!-- 수목원 지도 -->
       <section id="수목원지도" class="tab-panel" role="tabpanel" tabindex="0" hidden>
         <!-- 지도 -->
-        <div class="intro-hero reveal parallax from-up">
-          <img src="assets/img/소개/지도.jpg" title="map">
-        </div>
+        <figure class="garden-map reveal from-up">
+          <img src="assets/img/소개/지도.jpg" alt="가시림 수목원 지도">
+        </figure>
         <!-- 스팟 리스트????? -->
       </section>
 
