--- a/수목원지도.html
+++ b/수목원지도.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="수목원 지도" data-hero-image="assets/img/main.jpg" data-hero-alt="가시림 전경을 담은 항공 뷰"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <!-- 가시림 소개 -->
