--- a/오시는길.html
+++ b/오시는길.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="오시는 길" data-hero-image="assets/img/banner-fourseasons/winter(withoutsnow).jpg" data-hero-alt="겨울 풍경의 가시림 숲길"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <!-- 가시림 소개 -->
