--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div id="landing-header" data-include="partials/header-landing.html"></div>
 
     <!-- 가시림 소개 -->
-    <section class="body-container" aria-labelledby="intro-heading">
+    <section class="body-container body-container--stacked" aria-labelledby="intro-heading">
       <h2 id="intro-heading" class="sr-only">가시림 소개</h2>
 
       <div class="article article-container reveal from-up">
