--- a/단체문의.html
+++ b/단체문의.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="단체 문의" data-hero-image="assets/img/카페.jpg" data-hero-alt="가시림 카페 라운지 전경"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <!-- 가시림 소개 -->
