--- a/둘러보기.html
+++ b/둘러보기.html
@@ -24,7 +24,7 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="둘러보기" data-hero-image="assets/img/banner-fourseasons/winter.jpg" data-hero-alt="겨울 하늘 아래의 가시림 전경"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <!-- 가시림 소개 -->
