--- a/방문.html
+++ b/방문.html
@@ -21,7 +21,7 @@
 </head>
 <body>
   <div class="page">
-    <div id="site-header" data-include="partials/header-site.html"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="방문 안내" data-hero-image="assets/img/banner-fourseasons/fall.jpg" data-hero-alt="가을빛으로 물든 가시림 산책로"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
 
     <main class="visit-main" aria-labelledby="visit-heading">
