feat: refresh modal UX and shop catalog

--- a/shop.html
+++ b/shop.html
@@ -38,16 +38,16 @@
       <section class="shop-catalog" aria-label="가시림 상품 목록">
         <div class="shop-catalog__header">
           <div class="shop-filters" role="group" aria-label="상품 분류">
-            <button type="button" class="shop-filter is-active">All</button>
-            <button type="button" class="shop-filter">명상</button>
-            <button type="button" class="shop-filter">원예</button>
-            <button type="button" class="shop-filter">차</button>
+            <button type="button" class="shop-filter is-active" data-filter="all" aria-pressed="true">All</button>
+            <button type="button" class="shop-filter" data-filter="meditation" aria-pressed="false">명상</button>
+            <button type="button" class="shop-filter" data-filter="gardening" aria-pressed="false">원예</button>
+            <button type="button" class="shop-filter" data-filter="tea" aria-pressed="false">차</button>
           </div>
           <p class="shop-note">상품을 클릭하면 외부 스토어 페이지가 새 창에서 열립니다.</p>
         </div>
 
         <div class="shop-grid">
-          <a class="product-card" href="https://example.com/program/meditation" target="_blank" rel="noopener noreferrer">
+          <a class="product-card" data-category="meditation" href="https://example.com/program/meditation" target="_blank" rel="noopener noreferrer">
             <figure class="product-card__media">
               <img src="assets/img/유리온실2.jpg" alt="정규 명상 수업 상품 이미지" loading="lazy">
             </figure>
@@ -55,10 +55,11 @@
               <h3 class="product-card__title">정규 명상 수업</h3>
               <p class="product-card__description">매주 화요일·목요일 오전 8시 30분, 숲 속 명상 세션</p>
               <p class="product-card__price">25,000원</p>
+              <span class="product-card__cta">구매</span>
             </div>
           </a>
 
-          <a class="product-card" href="https://example.com/program/forest" target="_blank" rel="noopener noreferrer">
+          <a class="product-card" data-category="meditation" href="https://example.com/program/forest" target="_blank" rel="noopener noreferrer">
             <figure class="product-card__media">
               <img src="assets/img/유리온실.jpg" alt="숲 명상 체험 상품 이미지" loading="lazy">
             </figure>
@@ -66,10 +67,11 @@
               <h3 class="product-card__title">숲 명상: 오감으로 느끼는 메타세쿼이아</h3>
               <p class="product-card__description">숲 해설과 함께하는 90분 명상, 계절별 한정 운영</p>
               <p class="product-card__price">28,000원</p>
+              <span class="product-card__cta">구매</span>
             </div>
           </a>
 
-          <a class="product-card" href="https://example.com/program/floral" target="_blank" rel="noopener noreferrer">
+          <a class="product-card" data-category="gardening" href="https://example.com/program/floral" target="_blank" rel="noopener noreferrer">
             <figure class="product-card__media">
               <img src="assets/img/가든센터.jpg" alt="플라워 클래스 상품 이미지" loading="lazy">
             </figure>
@@ -77,10 +79,11 @@
               <h3 class="product-card__title">가드닝 &amp; 플라워 클래스</h3>
               <p class="product-card__description">정원에서 직접 수확한 소재로 만드는 센터피스 작업</p>
               <p class="product-card__price">45,000원</p>
+              <span class="product-card__cta">구매</span>
             </div>
           </a>
 
-          <a class="product-card" href="https://example.com/product/tea" target="_blank" rel="noopener noreferrer">
+          <a class="product-card" data-category="tea" href="https://example.com/product/tea" target="_blank" rel="noopener noreferrer">
             <figure class="product-card__media">
               <img src="assets/img/카페.jpg" alt="허브 티 세트 상품 이미지" loading="lazy">
             </figure>
@@ -88,10 +91,11 @@
               <h3 class="product-card__title">허브 블렌딩 티 세트</h3>
               <p class="product-card__description">가시림 온실에서 말린 허브를 블렌딩한 시그니처 티</p>
               <p class="product-card__price">19,000원</p>
+              <span class="product-card__cta">구매</span>
             </div>
           </a>
 
-          <a class="product-card" href="https://example.com/program/workshop" target="_blank" rel="noopener noreferrer">
+          <a class="product-card" data-category="gardening" href="https://example.com/program/workshop" target="_blank" rel="noopener noreferrer">
             <figure class="product-card__media">
               <img src="assets/img/유리온실2.jpg" alt="식물 번식 워크숍 상품 이미지" loading="lazy">
             </figure>
@@ -99,10 +103,11 @@
               <h3 class="product-card__title">식물 번식 워크숍</h3>
               <p class="product-card__description">삽목과 분주 실습으로 배우는 홈 가드닝 핵심 스킬</p>
               <p class="product-card__price">32,000원</p>
+              <span class="product-card__cta">구매</span>
             </div>
           </a>
 
-          <a class="product-card" href="https://example.com/product/mist" target="_blank" rel="noopener noreferrer">
+          <a class="product-card" data-category="tea" href="https://example.com/product/mist" target="_blank" rel="noopener noreferrer">
             <figure class="product-card__media">
               <img src="assets/img/main.jpg" alt="가시림 시그니처 룸 미스트 상품 이미지" loading="lazy">
             </figure>
@@ -110,6 +115,7 @@
               <h3 class="product-card__title">가시림 시그니처 룸 미스트</h3>
               <p class="product-card__description">숲 내음과 감귤 향을 담은 공간향, 휴식의 순간을 완성</p>
               <p class="product-card__price">21,000원</p>
+              <span class="product-card__cta">구매</span>
             </div>
           </a>
         </div>
