--- a/index.html
+++ b/index.html
@@ -91,22 +91,22 @@
     <section class="cards-container" id="space" aria-labelledby="space-heading">
       <h2 id="space-heading" class="cards-title">Space</h2>
       <div class="cards">
-        <a class="card" href="#garden-center" aria-label="가든 센터">
+        <a class="card" href="공간소개.html?space=%EC%9C%A0%EB%A6%AC%20%EC%98%A8%EC%8B%A4" aria-label="가든 센터">
           <div class="card-img" style="--bg:url('../img/가든센터.jpg');"></div>
           <div class="card-overlay"></div>
           <div class="card-label">식물 온실</div>
         </a>
-        <a class="card" href="#cafe" aria-label="카페">
+        <a class="card" href="공간소개.html?space=%ED%94%8C%EB%9E%9C%ED%8A%B8%20%EC%B9%B4%ED%8E%98" aria-label="카페">
           <div class="card-img" style="--bg:url('../img/카페.jpg');"></div>
           <div class="card-overlay"></div>
           <div class="card-label">카페</div>
         </a>
-        <a class="card" href="#classroom" aria-label="교육실">
+        <a class="card" href="공간소개.html?space=%EB%A7%88%EC%9D%8C%20%EC%98%A8%EC%8B%A4%20%EC%8A%A4%ED%8A%9C%EB%94%94%EC%98%A4" aria-label="교육실">
           <div class="card-img" style="--bg:url('../img/유리온실2.jpg');"></div>
           <div class="card-overlay"></div>
           <div class="card-label">마음 온실</div>
         </a>
-        <a class="card" href="#tbd" aria-label="미정 공간">
+        <a class="card" href="공간소개.html?space=%EA%B0%80%EB%93%A0%EC%84%BC%ED%84%B0" aria-label="미정 공간">
           <div class="card-img" style="--bg:url('../img/유리온실.jpg');"></div>
           <div class="card-overlay"></div>
           <div class="card-label">식물 가게</div>
