--- a/방문.html
+++ b/방문.html
@@ -35,7 +35,7 @@
         <div class="visit-grid">
           <article class="visit-card">
             <span class="visit-badge">운영 시간</span>
-            <p class="visit-card__title">매일 09:00 – 18:00</p>
+            <p class="visit-card__title">매일 09:30 – 18:00</p>
             <p>마지막 입장은 17:00까지 가능합니다. 폭우나 강풍 등 기상 상황에 따라 운영 시간이 변동될 수 있으니 방문 전 공지 사항을 확인해 주세요.</p>
             <ul>
               <li>사전 예약 없이 현장 입장 가능</li>
@@ -46,19 +46,19 @@
             <span class="visit-badge">이용 요금</span>
             <p class="visit-card__title">연령별 요금 안내</p>
             <ul>
-              <li>일반: 12,000원</li>
-              <li>청소년·경로: 9,000원</li>
-              <li>어린이: 6,000원 (36개월 미만 무료)</li>
+              <li>일반: 6,000원</li>
+              <li>어린이·청소년: 5,000원</li>
+              <li>우대 할인: 5,000원 (36개월 미만 무료)/li>
+              <li>무료 입장: 영유아·가시림 주민/li>
             </ul>
-            <p>온라인 예매 시 QR 코드로 빠르게 입장할 수 있으며, 현장 매표소에서도 카드 및 현금 결제가 가능합니다.</p>
+            <p>온라인 예매 시 더 빠르게 입장하실 수 있으며, 현장 매표소에서도 카드 및 현금 결제가 가능합니다.</p>
           </article>
           <article class="visit-card">
             <span class="visit-badge">방문 Tip</span>
             <p class="visit-card__title">자연을 즐기는 방법</p>
             <ul>
-              <li>계절별 추천 코스를 안내 데스크에서 받아보세요</li>
-              <li>편안한 산책을 위해 편한 신발과 얇은 겉옷을 준비하세요</li>
-              <li>반려동물은 목줄 착용 시 동반 입장이 가능합니다</li>
+              <li>계절별 추천 코스를 매표소에서 받아보세요</li>
+              <li>반려동물은 목줄 착용 시 동반 입장이 가능합니다 (중형견까지 가능)</li>
             </ul>
           </article>
         </div>
@@ -68,19 +68,11 @@
         <div class="visit-section__header">
           <span class="visit-section__label">Directions</span>
           <h2 id="section-directions" class="visit-section__title">오시는 길</h2>
-          <p class="visit-section__lead">네비게이션에서 ‘가시림’ 또는 ‘가시림 수목원’을 검색해 주세요. 제주공항에서 자동차로 약 25분 거리에 위치해 있으며, 한적한 해안도로를 따라 천천히 드라이브하기 좋은 코스입니다.</p>
+          <p class="visit-section__lead">네비게이션에서 ‘가시림’ 또는 ‘가시림 수목원’을 검색해 주세요. 제주공항에서 자동차로 약 1시간 거리에 위치해 있습니다.</p>
         </div>
         <div class="visit-grid">
-          <article class="visit-card">
-            <p class="visit-card__title">대중교통 안내</p>
-            <p>제주공항에서 182번 버스를 이용해 ‘가시림입구’ 정류장에서 하차하신 후 도보 8분이면 가시림에 도착합니다. 택시 이용 시 기사님께 ‘가시림 수목원’을 말씀해 주세요.</p>
-            <div class="visit-actions">
-              <a class="visit-button visit-button--primary" href="tel:0640000000">064-000-0000 문의</a>
-              <a class="visit-button visit-button--ghost" href="오시는길.html">상세 길안내 보기</a>
-            </div>
-          </article>
           <div class="visit-map">
-            <div class="visit-map__badge">3266 Gasi-ri</div>
+            <div class="visit-map__badge">3266 가시리</div>
             <iframe title="가시림 위치 지도" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://maps.google.com/maps?q=3266%20Gasi-ri,%20Pyoseon-myeon,%20%ED%8A%B9%EB%B3%84%EC%9E%90%EC%B9%98%EB%8F%84,%20Seogwipo,%20Jeju-do,%20South%20Korea&output=embed"></iframe>
           </div>
         </div>
@@ -95,18 +87,13 @@
         <div class="contact-grid">
           <article class="contact-card">
             <span>Email</span>
-            <a href="mailto:contact@gasirim.kr">contact@gasirim.kr</a>
+            <a href="mailto:jejugasirim@gmail.com">jejugasirim@gmail.com</a>
             <p>프로그램 구성 및 대관 관련 제안 요청은 이메일로 상세히 적어 주시면 더욱 빠르게 도와드릴 수 있습니다.</p>
           </article>
           <article class="contact-card">
             <span>Phone</span>
-            <a href="tel:0640000000">064-000-0000</a>
-            <p>평일 09:00 – 18:00에 상담이 가능합니다. 상담 중에는 부재중일 수 있으며, 메세지를 남겨 주시면 회신 드립니다.</p>
-          </article>
-          <article class="contact-card">
-            <span>Kakao</span>
-            <a href="https://pf.kakao.com" target="_blank" rel="noopener">카카오톡 채널 ‘가시림’</a>
-            <p>카카오톡 채널을 추가하고 문의를 남겨 주세요. 실시간으로 운영 상황과 이벤트 소식을 받아보실 수 있습니다.</p>
+            <a href="tel:07042810906">070-4281-0906</a>
+            <p>평일 09:00 – 18:00에 문의 가능합니다.</p>
           </article>
         </div>
       </section>
