--- a/방문.html
+++ b/방문.html
@@ -35,12 +35,12 @@
         <div class="visit-grid">
           <article class="visit-card">
             <span class="visit-badge">운영 시간</span>
-            <p class="visit-card__title">매일 09:30 – 18:00</p>
-            <p>마지막 입장은 17:00까지 가능합니다. 폭우나 강풍 등 기상 상황에 따라 운영 시간이 변동될 수 있으니 방문 전 공지 사항을 확인해 주세요.</p>
+            <p class="visit-card__title">매일 09:30 – 18:00 (수요일 제외)</p>
             <ul>
+              <li>마지막 입장 17:00</li>
               <li>사전 예약 없이 현장 입장 가능</li>
-              <li>성수기에는 입장 대기 시간이 발생할 수 있습니다</li>
             </ul>
+            <p>폭우나 강풍 등 기상 상황에 따라 운영 시간이 변동될 수 있으니 방문 전 공지 사항을 확인해 주세요.</p>
           </article>
           <article class="visit-card">
             <span class="visit-badge">이용 요금</span>
@@ -51,14 +51,16 @@
               <li>우대 할인: 5,000원 (36개월 미만 무료)/li>
               <li>무료 입장: 영유아·가시림 주민/li>
             </ul>
-            <p>온라인 예매 시 더 빠르게 입장하실 수 있으며, 현장 매표소에서도 카드 및 현금 결제가 가능합니다.</p>
           </article>
           <article class="visit-card">
-            <span class="visit-badge">방문 Tip</span>
-            <p class="visit-card__title">자연을 즐기는 방법</p>
+            <span class="visit-badge">방문 안내</span>
+            <p class="visit-card__title">편의 사항</p>
             <ul>
-              <li>계절별 추천 코스를 매표소에서 받아보세요</li>
+              <li>무료 주차장이 구비되어 있습니다</li>
               <li>반려동물은 목줄 착용 시 동반 입장이 가능합니다 (중형견까지 가능)</li>
+              <li>지역화폐 (탐나는전) 사용 가능합니다</li>
+              <li>휠체어 입장 가능합니다 (이용 가능한 산책로가 한정적일 수 있음)</li>
+              <li>계절별 추천 코스를 매표소에서 받내보세요</li>
             </ul>
           </article>
         </div>
