--- a/shop.html
+++ b/shop.html
@@ -24,14 +24,15 @@
   <div class="page">
     
     <!-- Header -->
-    <div id="site-header" data-include="partials/header-shop.html"></div>
+    <div id="site-header" data-include="partials/header-site.html" data-hero-title="Shop" data-hero-image="assets/img/banner-fourseasons/summer.jpg" data-hero-alt="샵"></div>
     <div id="site-bar" data-include="partials/sticky-header-bar.html"></div>
+
     <main class="shop-main" aria-labelledby="shop-heading">
       <section class="shop-overview">
         <div class="shop-overview__inner">
           <p class="shop-overview__eyebrow">Shop</p>
-          <h2 class="shop-overview__title" id="shop-heading">자연을 닮은 오브제로 공간을 채우다</h2>
-          <p class="shop-overview__description">가시림의 명상과 원예 프로그램에서 영감을 받은 굿즈와 클래스를 엄선했습니다. 감각을 깨우는 수업과 숍 아이템을 통해 일상의 시간을 특별하게 채워보세요.</p>
+          <h2 class="shop-overview__title" id="shop-heading">가시림의 자연을 닮은 오브제로 공간을 채우다</h2>
+          <p class="shop-overview__description">가시림의 자연을 담은 여러 상품 들을 만나보세요. 가시림의 동백꽃으로 블렌딩한 가시림 시그니쳐 티 (茶) 부터, 이끼 화분, 고사리 화분, 희귀 종자들까지 - 작은 아이템들로 일상의 시간을 특별하게 채워보세요.</p>
         </div>
       </section>
 
@@ -39,8 +40,8 @@
         <div class="shop-catalog__header">
           <div class="shop-filters" role="group" aria-label="상품 분류">
             <button type="button" class="shop-filter is-active" data-filter="all" aria-pressed="true">All</button>
-            <button type="button" class="shop-filter" data-filter="meditation" aria-pressed="false">명상</button>
-            <button type="button" class="shop-filter" data-filter="gardening" aria-pressed="false">원예</button>
+            <button type="button" class="shop-filter" data-filter="meditation" aria-pressed="false">화분</button>
+            <button type="button" class="shop-filter" data-filter="gardening" aria-pressed="false">종자</button>
             <button type="button" class="shop-filter" data-filter="tea" aria-pressed="false">차</button>
           </div>
           <p class="shop-note">상품을 클릭하면 외부 스토어 페이지가 새 창에서 열립니다.</p>
@@ -52,8 +53,8 @@
               <img src="assets/img/유리온실2.jpg" alt="정규 명상 수업 상품 이미지" loading="lazy">
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">정규 명상 수업</h3>
-              <p class="product-card__description">매주 화요일·목요일 오전 8시 30분, 숲 속 명상 세션</p>
+              <h3 class="product-card__title">제품 이름</h3>
+              <p class="product-card__description">설명</p>
               <p class="product-card__price">25,000원</p>
               <span class="product-card__cta">구매</span>
             </div>
@@ -64,9 +65,9 @@
               <img src="assets/img/유리온실.jpg" alt="숲 명상 체험 상품 이미지" loading="lazy">
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">숲 명상: 오감으로 느끼는 메타세쿼이아</h3>
-              <p class="product-card__description">숲 해설과 함께하는 90분 명상, 계절별 한정 운영</p>
-              <p class="product-card__price">28,000원</p>
+              <h3 class="product-card__title">제품 이름</h3>
+              <p class="product-card__description">설명</p>
+              <p class="product-card__price">25,000원</p>
               <span class="product-card__cta">구매</span>
             </div>
           </a>
@@ -76,9 +77,9 @@
               <img src="assets/img/가든센터.jpg" alt="플라워 클래스 상품 이미지" loading="lazy">
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">가드닝 &amp; 플라워 클래스</h3>
-              <p class="product-card__description">정원에서 직접 수확한 소재로 만드는 센터피스 작업</p>
-              <p class="product-card__price">45,000원</p>
+              <h3 class="product-card__title">제품 이름</h3>
+              <p class="product-card__description">설명</p>
+              <p class="product-card__price">25,000원</p>
               <span class="product-card__cta">구매</span>
             </div>
           </a>
@@ -88,9 +89,9 @@
               <img src="assets/img/카페.jpg" alt="허브 티 세트 상품 이미지" loading="lazy">
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">허브 블렌딩 티 세트</h3>
-              <p class="product-card__description">가시림 온실에서 말린 허브를 블렌딩한 시그니처 티</p>
-              <p class="product-card__price">19,000원</p>
+              <h3 class="product-card__title">제품 이름</h3>
+              <p class="product-card__description">설명</p>
+              <p class="product-card__price">25,000원</p>
               <span class="product-card__cta">구매</span>
             </div>
           </a>
@@ -100,9 +101,9 @@
               <img src="assets/img/유리온실2.jpg" alt="식물 번식 워크숍 상품 이미지" loading="lazy">
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">식물 번식 워크숍</h3>
-              <p class="product-card__description">삽목과 분주 실습으로 배우는 홈 가드닝 핵심 스킬</p>
-              <p class="product-card__price">32,000원</p>
+              <h3 class="product-card__title">제품 이름</h3>
+              <p class="product-card__description">설명</p>
+              <p class="product-card__price">25,000원</p>
               <span class="product-card__cta">구매</span>
             </div>
           </a>
@@ -112,9 +113,9 @@
               <img src="assets/img/main.jpg" alt="가시림 시그니처 룸 미스트 상품 이미지" loading="lazy">
             </figure>
             <div class="product-card__copy">
-              <h3 class="product-card__title">가시림 시그니처 룸 미스트</h3>
-              <p class="product-card__description">숲 내음과 감귤 향을 담은 공간향, 휴식의 순간을 완성</p>
-              <p class="product-card__price">21,000원</p>
+              <h3 class="product-card__title">제품 이름</h3>
+              <p class="product-card__description">설명</p>
+              <p class="product-card__price">25,000원</p>
               <span class="product-card__cta">구매</span>
             </div>
           </a>
