shop and visit page fix

--- a/방문.html
+++ b/방문.html
@@ -46,34 +46,32 @@
         <div class="visit-section__header">
           <span class="visit-section__label">Locations &amp; Hours</span>
           <h2 id="section-location" class="visit-section__title">위치 및 운영 안내</h2>
-          <p class="visit-section__lead">사계절 내내 이어지는 가시림의 일상을 가까이에서 만나보세요. 운영 시간과 휴무일, 입장 마감 정보를 미리 확인하시면 더욱 여유로운 방문을 도와드립니다.</p>
         </div>
         <div class="visit-location__grid">
           <figure class="visit-location__image">
-            <img src="assets/img/유리온실.jpg" alt="가시림 수목원의 온실 외관" loading="lazy" />
-            <figcaption class="visit-location__caption">가시림 수목원 유리온실 전경</figcaption>
+            <img src="assets/img/입구와매표소.jpg" alt="가시림 매표소 앞 사진" loading="lazy" />
+            <figcaption class="visit-location__caption">가시림 입구 및 매표소</figcaption>
           </figure>
           <article class="visit-hours-card" aria-label="운영 정보">
-            <span class="visit-status visit-status--open">오늘 운영 중 · 09:30 – 18:00</span>
             <dl class="visit-hours-list">
               <div class="visit-hours-list__item">
-                <dt>정규 운영</dt>
+                <dt>운영</dt>
                 <dd>매일 09:30 – 18:00</dd>
               </div>
               <div class="visit-hours-list__item">
-                <dt>휴무</dt>
-                <dd>매주 수요일 정기 휴무 (시설 점검)</dd>
+                <dt>정기 휴무</dt>
+                <dd>매주 수요일 </dd>
               </div>
               <div class="visit-hours-list__item">
                 <dt>입장 마감</dt>
-                <dd>17:00 (프로그램 예약 시 시작 10분 전 도착 권장)</dd>
+                <dd>17:30</dd>
               </div>
               <div class="visit-hours-list__item">
                 <dt>현장 안내</dt>
-                <dd>예약 없이 방문 가능하며, 기상 상황에 따라 일부 구역 운영이 변경될 수 있습니다.</dd>
+                <dd>현장 구매, 온라인 예약 (네이버, 지마켓), 전화 예약 모두 가능합니다.</dd>
               </div>
             </dl>
-            <p class="visit-hours-note">네비게이션에서 ‘가시림 수목원’을 검색하거나 주소 <span lang="en">3266 Gasi-ri, Pyoseon-myeon</span>을 입력해 주세요.</p>
+            <p class="visit-hours-note">네비게이션에서 ‘가시림 수목원’을 검색하거나 '가시리 3266'을 입력해 주세요.</p>
           </article>
         </div>
       </section>
@@ -82,7 +80,6 @@
         <div class="visit-section__header">
           <span class="visit-section__label">Tickets</span>
           <h2 id="section-tickets" class="visit-section__title">이용 요금</h2>
-          <p class="visit-section__lead">현장에서 카드, 모바일 결제, 지역화폐(탐나는전)를 모두 지원합니다. 단체 예약은 사전 문의해 주시면 맞춤 견적을 안내드립니다.</p>
         </div>
         <div class="visit-rate-table" role="region" aria-labelledby="section-tickets">
           <table class="rate-table">
@@ -91,7 +88,7 @@
               <tr>
                 <th scope="col">구분</th>
                 <th scope="col">요금</th>
-                <th scope="col">비고</th>
+                <th scope="col">조건</th>
               </tr>
             </thead>
             <tbody>
@@ -103,35 +100,38 @@
               <tr>
                 <th scope="row">어린이·청소년</th>
                 <td>5,000원</td>
-                <td>만 3세 – 18세</td>
+                <td>만 7세 – 18세</td>
               </tr>
               <tr>
                 <th scope="row">우대 할인</th>
                 <td>5,000원</td>
-                <td>만 65세 이상, 국가유공자, 장애인 (증빙 지참)</td>
+                <td>만 65세 이상, 국가유공자, 장애인, 군인, 제주도민 (증빙 지참)</td>
               </tr>
               <tr>
-                <th scope="row">영유아·가시리 주민</th>
+                <th scope="row">영유아</th>
                 <td>무료</td>
-                <td>36개월 미만, 가시리 주민 (신분증 지참)</td>
+                <td>36개월 미만 (증빙 지참)</td>
+              </tr>
+              <tr>
+                <th scope="row">가시리 주민</th>
+                <td>무료</td>
+                <td>가시리 주민 (신분증 지참)</td>
               </tr>
             </tbody>
           </table>
         </div>
-        <p class="visit-rate-note">단체(20인 이상) 또는 프로그램 연계 방문 시 <a href="#visit-contact">문의 섹션</a>을 통해 맞춤 상담을 신청해 주세요.</p>
       </section>
 
       <section id="visit-guides" class="visit-section visit-section--guides" aria-labelledby="section-guides">
         <div class="visit-section__header">
           <span class="visit-section__label">Know Before You Go</span>
           <h2 id="section-guides" class="visit-section__title">방문 전 알아두기</h2>
-          <p class="visit-section__lead">편안한 방문을 위해 꼭 확인해야 할 사항을 정리했습니다. 궁금한 내용을 펼쳐 보세요.</p>
         </div>
         <div class="visit-guideline-list">
           <details class="visit-guideline" open>
-            <summary>입장 및 관람</summary>
+            <summary>당일 재입장</summary>
             <div class="visit-guideline__body">
-              <p>입장권은 현장 매표소에서 발권하며 재입장은 당일에 한해 가능합니다. 우천 시 실내 온실과 전시관을 우선 이용하시길 권장합니다.</p>
+              <p>재입장은 불가능한 점 이해 부탁드립니다.</p>
             </div>
           </details>
           <details class="visit-guideline">
@@ -159,7 +159,6 @@
         <div class="visit-section__header">
           <span class="visit-section__label">Amenities</span>
           <h2 id="section-amenities" class="visit-section__title">편의 시설</h2>
-          <p class="visit-section__lead">방문객을 위한 주요 편의 사항을 확인하세요. 아이콘을 눌러 상세 설명을 읽어볼 수 있습니다.</p>
         </div>
         <ul class="amenity-list">
           <li class="amenity-list__item">
@@ -204,22 +203,21 @@
         <div class="visit-map__layout">
           <figure class="visit-map__frame">
             <div class="visit-map__badge">3266 가시리</div>
-            <iframe title="가시림 위치 지도" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://maps.google.com/maps?q=3266%20Gasi-ri,%20Pyoseon-myeon,%20%ED%8A%B9%EB%B3%84%EC%9E%90%EC%B9%98%EB%8F%84,%20Seogwipo,%20Jeju-do,%20South%20Korea&z=16&output=embed"></iframe>
+            <iframe title="가시림 위치 지도" loading="lazy" allowfullscreen referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.384523347821!2d126.74911287548557!3d33.36102587342499!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x350d05ab91c5e7d3%3A0xd9b9442adb7e6c06!2sGasirim!5e0!3m2!1sen!2sus!4v1759572278539!5m2!1sen!2sus"</iframe>
           </figure>
           <aside class="visit-map__details">
-            <h3 class="visit-map__title">가시림 수목원 안내</h3>
-            <p class="visit-map__address">제주특별자치도 서귀포시 표선면 녹산로5번길 171</p>
+            <h3 class="visit-map__title">제주특별자치도 서귀포시 표선면 가시리 3266</h3>
             <dl class="visit-directions">
               <div class="visit-directions__row">
-                <dt>자동차</dt>
-                <dd>제주국제공항 → 번영로 → 표선면 방면 약 60분 소요 (주차장 무료)</dd>
+                <dt>자동차 (1시간) </dt>
+                <dd>제주국제공항 → 번영로 → 표선면 방면</dd>
               </div>
               <div class="visit-directions__row">
-                <dt>버스</dt>
-                <dd>201, 221 번 노선 이용 후 ‘가시리입구’ 하차, 도보 10분</dd>
+                <dt>버스 (1시간 30분) </dt>
+                <dd>제주국제공항 → 121번 혹은 120번 이용 → 표선고등학교 정류장 하차 → 732-2번 이용  → 안좌동 정류장 하차  → 도보 5분</dd>
               </div>
               <div class="visit-directions__row">
-                <dt>택시</dt>
+                <dt>택시 (1시간) </dt>
                 <dd>공항에서 약 35,000원 내외, 기사님께 ‘가시림 수목원’으로 말씀해 주세요.</dd>
               </div>
             </dl>
@@ -231,20 +229,29 @@
         <div class="visit-section__header">
           <span class="visit-section__label">Contact</span>
           <h2 id="section-group" class="visit-section__title">단체 예약 및 대관 문의</h2>
-          <p class="visit-section__lead">기업 워크숍, 원예 클래스, 스냅 촬영 등 목적에 맞춘 맞춤형 프로그램과 공간을 제안해 드립니다. 방문 희망일과 인원, 요청 사항을 남겨 주시면 전담 매니저가 빠르게 연락드립니다.</p>
+          <p class="visit-section__lead">기업 워크숍, 원예 클래스, 스냅 촬영 등 목적에 맞춘 맞춤형 프로그램과 공간을 제안해 드립니다. 방문 희망일과 인원, 요청 사항과 함께 연락주세요.</p>
         </div>
-        <div class="contact-grid">
-          <article class="contact-card">
-            <span>Email</span>
-            <a href="mailto:jejugasirim@gmail.com">jejugasirim@gmail.com</a>
-            <p>프로그램 구성 및 대관 관련 제안 요청은 이메일로 상세히 적어 주시면 더욱 빠르게 도와드릴 수 있습니다.</p>
-          </article>
-          <article class="contact-card">
-            <span>Phone</span>
-            <a href="tel:07042810906">070-4281-0906</a>
-            <p>평일 09:00 – 18:00에 문의 가능합니다.</p>
-          </article>
-        </div>
+        
+        <ul class="amenity-list">
+          <li class="amenity-list__item">
+            <span class="amenity-list__icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" focusable="false"><circle cx="12" cy="12" r="9" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /><path d="M10.2 7.2h2.7a2.4 2.4 0 1 1 0 4.8h-2.7v4.8" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /></svg>
+            </span>
+            <article class="contact-card">
+              <span>Email</span>
+              <a href="mailto:jejugasirim@gmail.com">jejugasirim@gmail.com</a>
+            </article>
+          </li>
+          <li class="amenity-list__item">
+            <span class="amenity-list__icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" focusable="false"><circle cx="12" cy="12" r="9" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /><path d="M10.2 7.2h2.7a2.4 2.4 0 1 1 0 4.8h-2.7v4.8" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /></svg>
+            </span>
+            <article class="contact-card">
+              <span>Phone</span>
+              <a href="tel:07042810906">070-4281-0906</a>
+            </article>
+          </li>
+        </ul>
       </section>
     </main>
 
