--- a/방문.html
+++ b/방문.html
@@ -49,7 +49,7 @@
         </div>
         <div class="visit-location__grid">
           <figure class="visit-location__image">
-            <img src="assets/img/입구와매표소.jpg" alt="가시림 매표소 앞 사진" loading="lazy" />
+            <img src="assets/img/ticketoffice.jpg" alt="가시림 매표소 앞 사진" loading="lazy" />
             <figcaption class="visit-location__caption">가시림 입구 및 매표소</figcaption>
           </figure>
           <article class="visit-hours-card" aria-label="운영 정보">
@@ -67,11 +67,10 @@
                 <dd>17:30</dd>
               </div>
               <div class="visit-hours-list__item">
-                <dt>현장 안내</dt>
+                <dt>입장권 구매 방법</dt>
                 <dd>현장 구매, 온라인 예약 (네이버, 지마켓), 전화 예약 모두 가능합니다.</dd>
               </div>
             </dl>
-            <p class="visit-hours-note">네비게이션에서 ‘가시림 수목원’을 검색하거나 '가시리 3266'을 입력해 주세요.</p>
           </article>
         </div>
       </section>
