--- a/방문.html
+++ b/방문.html
@@ -126,7 +126,7 @@
           <h2 id="section-guides" class="visit-section__title">방문 전 알아두기</h2>
         </div>
         <div class="visit-guideline-list">
-          <details class="visit-guideline" open>
+          <details class="visit-guideline">
             <summary>당일 재입장</summary>
             <div class="visit-guideline__body">
               <p>재입장은 불가능한 점 이해 부탁드립니다.</p>
@@ -229,27 +229,34 @@
           <h2 id="section-group" class="visit-section__title">단체 예약 및 대관 문의</h2>
           <p class="visit-section__lead">기업 워크숍, 원예 클래스, 스냅 촬영 등 목적에 맞춘 맞춤형 프로그램과 공간을 제안해 드립니다. 방문 희망일과 인원, 요청 사항과 함께 연락주세요.</p>
         </div>
-        
-        <ul class="amenity-list">
-          <li class="amenity-list__item">
-            <span class="amenity-list__icon" aria-hidden="true">
-              <svg viewBox="0 0 24 24" focusable="false"><circle cx="12" cy="12" r="9" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /><path d="M10.2 7.2h2.7a2.4 2.4 0 1 1 0 4.8h-2.7v4.8" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /></svg>
+
+        <div class="visit-contact__grid">
+          <article class="contact-card">
+            <span class="contact-card__icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" focusable="false">
+                <path d="M4.2 6.5h15.6a1.8 1.8 0 0 1 1.8 1.8v7.4a1.8 1.8 0 0 1-1.8 1.8H4.2a1.8 1.8 0 0 1-1.8-1.8V8.3a1.8 1.8 0 0 1 1.8-1.8Z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round" />
+                <path d="m3.2 8.2 7.7 4.9a1.8 1.8 0 0 0 1.9 0l7.7-4.9" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
             </span>
-            <article class="contact-card">
-              <span>Email</span>
-              <a href="mailto:jejugasirim@gmail.com">jejugasirim@gmail.com</a>
-            </article>
-          </li>
-          <li class="amenity-list__item">
-            <span class="amenity-list__icon" aria-hidden="true">
-              <svg viewBox="0 0 24 24" focusable="false"><circle cx="12" cy="12" r="9" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /><path d="M10.2 7.2h2.7a2.4 2.4 0 1 1 0 4.8h-2.7v4.8" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" /></svg>
+            <div class="contact-card__content">
+              <span class="contact-card__label">Email</span>
+              <a class="contact-card__value" href="mailto:jejugasirim@gmail.com">jejugasirim@gmail.com</a>
+              <p class="contact-card__note">프로그램·단체 예약 문의는 24시간 이내 회신해 드립니다.</p>
+            </div>
+          </article>
+          <article class="contact-card">
+            <span class="contact-card__icon" aria-hidden="true">
+              <svg viewBox="0 0 24 24" focusable="false">
+                <path d="M8.2 4h2.2a2 2 0 0 1 1.9 1.4l0.6 1.9a2 2 0 0 1-0.9 2.3l-1.4 0.8a12.5 12.5 0 0 0 5.2 5.2l0.8-1.4a2 2 0 0 1 2.3-0.9l1.9 0.6A2 2 0 0 1 21 15.9V18a2 2 0 0 1-2.2 2 17.5 17.5 0 0 1-7.8-3.1 17.2 17.2 0 0 1-5.9-5.9A17.5 17.5 0 0 1 2 3.2 2 2 0 0 1 4 1h2.2a2 2 0 0 1 2 1.6Z" fill="none" stroke="currentColor" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
             </span>
-            <article class="contact-card">
-              <span>Phone</span>
-              <a href="tel:07042810906">070-4281-0906</a>
-            </article>
-          </li>
-        </ul>
+            <div class="contact-card__content">
+              <span class="contact-card__label">Phone</span>
+              <a class="contact-card__value" href="tel:07042810906">070-4281-0906</a>
+              <p class="contact-card__note">평일 09:30–17:30 전화 상담, 주말에는 문자로 문의해주세요.</p>
+            </div>
+          </article>
+        </div>
       </section>
     </main>
 
